2004-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* docs/Makefile.am: added spip utility
	* docs/spip_oneboard.xsl: created this tool to create the screenshot web site in spip format
	* docs/spipparser.pl: -
	* src/boards/wordsgame.c: (wordsgame_create_item): fixed word positionning by Alexey Lubimov

2004-11-14  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/wordsgame.c: (pause_board), (start_board),
	(end_board), (key_press), (wordsgame_next_level),
	(wordsgame_move_item), (wordsgame_move_items),
	(wordsgame_destroy_item), (wordsgame_destroy_items),
	(wordsgame_destroy_all_items), (wordsgame_create_item),
	(wordsgame_add_new_item), (wordsgame_drop_items), (player_win),
	(get_wordfile), (wordsgame_read_wordfile): thread save, rock stable version by Alexey Lubimov
	* src/gcompris/gameutil.c: (g_utf8_strndup): added g_utf8_strndup
	* src/gcompris/gameutil.h: added g_utf8_strndup

2004-11-12  Bruno coudoin  <bruno.coudoin@free.fr>

	Italian sounds resampled to 44100 by Marcello Missiroli
	Upgraded italian sounds release to 1.1
	
	* boards/sounds/it/alphabet/1.ogg:
	* boards/sounds/it/alphabet/10.ogg:
	* boards/sounds/it/alphabet/11.ogg:
	* boards/sounds/it/alphabet/12.ogg:
	* boards/sounds/it/alphabet/13.ogg:
	* boards/sounds/it/alphabet/14.ogg:
	* boards/sounds/it/alphabet/15.ogg:
	* boards/sounds/it/alphabet/16.ogg:
	* boards/sounds/it/alphabet/17.ogg:
	* boards/sounds/it/alphabet/18.ogg:
	* boards/sounds/it/alphabet/19.ogg:
	* boards/sounds/it/alphabet/2.ogg:
	* boards/sounds/it/alphabet/20.ogg:
	* boards/sounds/it/alphabet/3.ogg:
	* boards/sounds/it/alphabet/4.ogg:
	* boards/sounds/it/alphabet/5.ogg:
	* boards/sounds/it/alphabet/6.ogg:
	* boards/sounds/it/alphabet/7.ogg:
	* boards/sounds/it/alphabet/8.ogg:
	* boards/sounds/it/alphabet/9.ogg:
	* boards/sounds/it/alphabet/a.ogg:
	* boards/sounds/it/alphabet/b.ogg:
	* boards/sounds/it/alphabet/c.ogg:
	* boards/sounds/it/alphabet/d.ogg:
	* boards/sounds/it/alphabet/e.ogg:
	* boards/sounds/it/alphabet/f.ogg: